--- a/src/routes/Game/style.module.css
+++ b/src/routes/Game/style.module.css
@@ -1,59 +1,66 @@
-.container{
-    margin: 0 auto;
-    max-width: 240px;
+.container {
+  margin: 0 auto;
+  max-width: 240px;
 }
 .buttonHome {
-    margin: 100px auto;
+  margin: 0 auto;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .buttonHome:visited {
-    width: 100%;
-    max-width: 240px;
-    padding: 1rem;
-    border: 1px solid #fafafa;
-    color: #fafafa;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 1rem;
-    transition: all ease-in-out .25s;
-    cursor: pointer;
-    box-sizing: border-box;
+  width: 100%;
+  max-width: 240px;
+  padding: 1rem;
+  border: 1px solid #fafafa;
+  color: #fafafa;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1rem;
+  transition: all ease-in-out 0.25s;
+  cursor: pointer;
+  box-sizing: border-box;
 }
 
 .buttonHome:visited {
-    background: #f300b4;
-    border: 1px solid transparent;
-    color: #fafafa;
-    font-weight: bold;
-    outline: none;
+  background: #f300b4;
+  border: 1px solid transparent;
+  color: #fafafa;
+  font-weight: bold;
+  outline: none;
 }
 
 .buttonHome:hover {
-    background: transparent;
-    border: 1px solid #f300b4;
-    color: #f300b4;
-    transition: all ease-in-out 0s;
-    outline: none;
+  background: transparent;
+  border: 1px solid #f300b4;
+  color: #f300b4;
+  transition: all ease-in-out 0s;
+  outline: none;
 }
 
 .buttonHome:active {
-    background: transparent;
-    border: 1px solid #f300b4;
-    color: #f300b4;
-    transition: all ease-in-out 0s;
-    outline: none;
-    padding: 1.05rem 1rem calc(.95rem - 1px) calc(1rem - 1px);
-    border-top: 2px solid;
-    border-right: 2px solid;
+  background: transparent;
+  border: 1px solid #f300b4;
+  color: #f300b4;
+  transition: all ease-in-out 0s;
+  outline: none;
+  padding: 1.05rem 1rem calc(0.95rem - 1px) calc(1rem - 1px);
+  border-top: 2px solid;
+  border-right: 2px solid;
 }
 
 .buttonHome:disabled {
-    opacity: .4;
-    cursor: not-allowed;
+  opacity: 0.4;
+  cursor: not-allowed;
 }
 
 .buttonHome:disabled:hover {
-    background: #f300b4;
-    border: 1px solid transparent;
-    color: #fafafa;
+  background: #f300b4;
+  border: 1px solid transparent;
+  color: #fafafa;
 }
